Import patches-unapplied version 5-20150205-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: ba6ba3aa037a4448686f4dee20c68f386e91d8ee

New changelog entries:
  * Update to SVN 20150205.
  * Update GDC for GCC 5.
  * Build GDC multilib packages.
  * Update cross-install-location.diff for gcc-5. Closes: #776100.
  * Configure --with-default-libstdcxx-abi=c++11 for development,
    --with-default-libstdcxx-abi=c++98 for backports.
  * Apply proposed patch for PR target/64893 (AArch64), build using
    4.9 on AArch64 for now.
  * Don't disable bootstrap mode for the jit build on arm64, gets
    miscompiled.
  * Allow to build using gettext built with a newer GCC.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -94,7 +94,7 @@ endif
 LIBGCC_DEV_DEP := libgcc-$(BASE_VERSION)-dev$(LS)$(AQ) (= $(DEB_VERSION))
 $(foreach x,stdc++ gomp ssp gfortran itm objc atomic asan lsan ubsan quadmath go vtv cilkrts, \
 	$(eval $(call gen_multilib_deps,$(x),,$$$${gcc:Version})))
-$(foreach x,gcc stdc++ gfortran objc go, \
+$(foreach x,gcc stdc++ gfortran objc go phobos, \
 	$(eval $(call gen_multilib_deps,$(x),dev,$$$${gcc:Version})))
 $(foreach x,gcc stdc++ gfortran objc go, \
 	$(eval $(call gen_multilib_deps,$(x),dbg,$$$${gcc:Version})))
@@ -348,6 +348,7 @@ endif
 # needed for the include/asm symlink to run the testsuite for
 # non default multilibs
 GCC_MULTILIB_BUILD_DEP = g++-multilib [$(multilib_archs)],
+GCC_MULTILIB_BUILD_DEP += g++-4.9 [arm64],
 
 LIBUNWIND_DEV_DEP := libunwind7-dev$(LS)$(AQ) (>= 0.98.5-6)
 LIBUNWIND_BUILD_DEP := $(LIBUNWIND_DEV_DEP) [ia64],
@@ -1062,6 +1063,10 @@ ifeq ($(multilib),yes)
 		>> debian/substvars.local.tmp
 	echo 'dep:libobjcbiarchdev=$(libobjcbiarchdev)' \
 		>> debian/substvars.local.tmp
+  ifeq ($(with_libphobos),yes)
+	echo 'dep:libphobosbiarchdev=$(libphobosbiarchdev)' \
+		>> debian/substvars.local.tmp
+  endif
   ifeq ($(with_libssp),yes)
 	echo 'dep:libsspbiarch=$(libsspbiarch)' \
 		>> debian/substvars.local.tmp
