Import patches-unapplied version 5-20150226-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 11281dd30903102f731a4e7b1e060de5bf044fbb

New changelog entries:
  * Update to SVN 20150226.
    - Fix PR c/65040 (closes: #778514), PR tree-optimization/65053
      (closes: #778070, #778071), PR c++/64898 (closes: #778472).
  * Allow not to strip the compiler executables to be able to print backtraces
    for ICEs.
  * Fix gnat build on mips64el (James Cowgill). Addresses: #779191.
  * Fix the hppa64 cross build (John David Anglin). Closes: #778658.
  * Fix libstdc++ pretty printers for Python3. Closes: #778436.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -145,7 +145,7 @@ NEXT_GCC_MINOR_VERSION := $(shell expr $(echo $(GCC_MINOR_VERSION)) + 1)
 NEXT_GCC_RELEASE_VERSION := $(shell expr $(echo $(GCC_MAJOR_VERSION)) + 1)
 
 ifeq ($(single_package),yes)
-  BASE_VERSION := $(shell echo $(GCC_VERSION) | sed -e 's/\([1-9]\.[0-9]*\).*/\1/')
+  BASE_VERSION := $(shell echo $(GCC_VERSION) | sed -e 's/\([1-9]*\).*/\1/')
 endif
 
 GCC_SOURCE_VERSION := $(shell echo $(DEB_VERSION) | sed 's/-.*//')
