--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -1165,6 +1165,7 @@ endif
 ifeq ($(with_multiarch_lib),yes)
 	echo 'multiarch:breaks=gcc-4.3 (<< 4.3.6-1), gcc-4.4 (<< 4.4.6-4), gcc-4.5 (<< 4.5.3-2)' >> debian/substvars.local.tmp
 endif
+	echo 'golang:Conflicts=golang-go (<< 2:1.3.3-1ubuntu2)' >> debian/substvars.local.tmp
 ifeq ($(add_built_using),yes)
 	echo "Built-Using=$(shell dpkg-query -f '$${source:Package} (= $${source:Version}), ' -W gcc$(pkg_ver)-source)" \
 	>> debian/substvars.local.tmp
