--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -28,7 +28,7 @@ _soname_map = gcc=$(GCC_SONAME) stdc++=$(CXX_SONAME) gomp=$(GOMP_SONAME) \
 	go=$(GO_SONAME) backtrace=$(BTRACE_SONAME) \
 	atomic=$(ATOMIC_SONAME) asan=$(ASAN_SONAME) lsan=$(LSAN_SONAME) \
 	tsan=$(TSAN_SONAME) ubsan=$(UBSAN_SONAME) \
-	vtv=$(VTV_SONAME) cilkrts=$(CILKRTS_SONAME)
+	vtv=$(VTV_SONAME) cilkrts=$(CILKRTS_SONAME) mpx=$(MPX_SONAME)
 _soname = $(patsubst $(1)=%,%,$(filter $(1)=%,$(_soname_map)))
 
 # $(call _lib_name,<name>,<biarch>,<ext>)
@@ -63,7 +63,15 @@ define gen_multilib_deps
     endif
   endif
   ifeq ($$(biarchx32),yes)
-    ifeq ($$(biarch64),yes)
+    ifeq ($1,mpx)
+      ifeq ($$(biarch64),yes)
+        lib$1biarch$2 := $$(lib$1biarch64$2)
+      else ifeq ($$(biarch32),yes)
+        lib$1biarch$2 := $$(lib$1biarch32$2)
+      else
+        lib$1biarch$2 :=
+      endif
+    else ifeq ($$(biarch64),yes)
       lib$1biarch$2 := $$(lib$1biarch64$2), $$(lib$1biarchx32$2)
     else ifeq ($$(biarch32),yes)
       lib$1biarch$2 := $$(lib$1biarch32$2), $$(lib$1biarchx32$2)
@@ -92,7 +100,7 @@ ifeq ($(with_shared_libgcc),yes)
   $(eval $(call gen_multilib_deps,gcc,,$(DEB_LIBGCC_VERSION)))
 endif
 LIBGCC_DEV_DEP := libgcc-$(BASE_VERSION)-dev$(LS)$(AQ) (= $(DEB_VERSION))
-$(foreach x,stdc++ gomp ssp gfortran itm objc atomic asan lsan ubsan quadmath go vtv cilkrts, \
+$(foreach x,stdc++ gomp ssp gfortran itm objc atomic asan lsan mpx ubsan quadmath go vtv cilkrts, \
 	$(eval $(call gen_multilib_deps,$(x),,$$$${gcc:Version})))
 $(foreach x,gcc stdc++ gfortran objc go phobos, \
 	$(eval $(call gen_multilib_deps,$(x),dev,$$$${gcc:Version})))
@@ -765,6 +773,9 @@ ifeq ($(with_libcilkrts),yes)
   #addons += $(if $(findstring armel,$(biarchhfarchs)),libhfcilkrts)
   #addons += $(if $(findstring armhf,$(biarchsfarchs)),libsfcilkrts)
 endif
+ifeq ($(with_mpx),yes)
+  addons += libmpx lib32mpx lib64mpx
+endif
 ifeq ($(with_libqmath),yes)
   addons += libqmath lib32qmath lib64qmath libn32qmath
   addons += $(if $(findstring amd64,$(biarchx32archs)),libx32qmath)
@@ -921,6 +932,7 @@ control-file:
 	  -DUBSAN_SO=$(UBSAN_SONAME) \
 	  -DVTV_SO=$(VTV_SONAME) \
 	  -DCILKRTS_SO=$(CILKRTS_SONAME) \
+	  -DMPX_SO=$(MPX_SONAME) \
 	  -DQMATH_SO=$(QUADMATH_SONAME) \
 	  -DSSP_SO=$(SSP_SONAME) \
 	  -DGO_SO=$(GO_SONAME) \
@@ -1054,6 +1066,10 @@ ifeq ($(with_cilkrts),yes)
 	echo 'dep:libcilkrts=libcilkrts$(CILKRTS_SONAME)$(LS)$(AQ) (>= $${gcc:Version})' \
 		>> debian/substvars.local.tmp
 endif
+ifeq ($(with_mpx),yes)
+	echo 'dep:libmpx=libmpx$(MPX_SONAME)$(LS)$(AQ) (>= $${gcc:Version})' \
+		>> debian/substvars.local.tmp
+endif
 ifeq ($(with_qmath),yes)
 	echo 'dep:libqmath=libquadmath$(QUADMATH_SONAME)$(LS)$(AQ) (>= $${gcc:Version})' \
 		>> debian/substvars.local.tmp
@@ -1109,6 +1125,10 @@ ifeq ($(multilib),yes)
   endif
   ifeq ($(with_cilkrts),yes)
 	echo 'dep:libcilkrtsbiarch=$(libcilkrtsbiarch)' \
+		>> debian/substvars.local.tmp
+  endif
+  ifeq ($(with_mpx),yes)
+	echo 'dep:libmpxbiarch=$(libmpxbiarch)' \
 		>> debian/substvars.local.tmp
   endif
   ifeq ($(with_qmath),yes)
@@ -1221,6 +1241,7 @@ parameters-file:
 		echo 'UBSAN_SONAME	:= $(UBSAN_SONAME)'; \
 		echo 'VTV_SONAME	:= $(VTV_SONAME)'; \
 		echo 'CILKRTS_SONAME	:= $(CILKRTS_SONAME)'; \
+		echo 'MPX_SONAME	:= $(MPX_SONAME)'; \
 		echo 'QMATH_SONAME	:= $(QUADMATH_SONAME)'; \
 		echo 'GCCMATH_SONAME	:= $(GCCMATH_SONAME)'; \
 		echo 'GO_SONAME		:= $(GO_SONAME)'; \
