Import patches-unapplied version 5-20150321-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 798db8e88743b2bbbc88b015e426fedcb634f26e

New changelog entries:
  * Update to SVN 20150321.
  * Move the libcc1plugin from the gcc-5-plugin-dev package into the
    gcc-5 package.

--- a/debian/control
+++ b/debian/control
@@ -264,7 +264,7 @@ Depends: cpp-5 (= ${gcc:Version}), gcc-5-base (= ${gcc:Version}),
   binutils (>= ${binutils:Version}), 
   ${dep:libgccdev}, ${shlibs:Depends}, ${misc:Depends}
 Recommends: ${dep:libcdev}
-Replaces: gccgo-5 (<< ${gcc:Version})
+Replaces: gccgo-5 (<< ${gcc:Version}), gcc-5-plugin-dev (<< 5-20150321-1)
 Suggests: ${gcc:multilib}, gcc-5-doc (>= ${gcc:SoftVersion}),
  gcc-5-locales (>= ${gcc:SoftVersion}),
  libgcc1-dbg (>= ${libgcc:Version}),
