--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -373,10 +373,7 @@ else
   MPFR_BUILD_DEP = libmpfr-dev (>= 3.0.0-9~),
 endif
 
-PPL_BUILD_DEP = libisl-dev,
-CLOOG_BUILD_DEP = libcloog-isl-dev (>= 0.18),
-# FIXME: currently not dl'opened.
-#CLOOG_RUNTIME_DEP = libisl10, libcloog-isl4
+ISL_BUILD_DEP = libisl-dev,
 
 ifneq (,$(filter $(distrelease),lenny etch squeeze wheezy dapper hardy jaunty karmic lucid maverick natty oneiric precise quantal raring))
   MPC_BUILD_DEP = libmpc-dev,
@@ -486,7 +483,7 @@ ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
     # Build gnat as part of the combiled gcc-x.y source package.  Do not fail
     # if gnat is not present on unsupported architectures; the build scripts
     # will not use gnat anyway.
-    GNAT_BUILD_DEP := gnat-5 [$(ada_no_archs)],
+    GNAT_BUILD_DEP := gnat-4.9 [$(ada_no_archs)],
   endif
 else ifeq ($(single_package),yes)
   # Ditto, as part of the gcc-snapshot package.
@@ -612,7 +609,7 @@ ctrl_flags += \
 	-DCHECK_BUILD_DEP="$(CHECK_BUILD_DEP)" \
 	-DAUTO_BUILD_DEP="$(AUTO_BUILD_DEP)" \
 	-DSDT_BUILD_DEP="$(SDT_BUILD_DEP)" \
-	-DCLOOG_BUILD_DEP="$(CLOOG_BUILD_DEP)" \
+	-DISL_BUILD_DEP="$(ISL_BUILD_DEP)" \
 	-DGMP_BUILD_DEP="$(GMP_BUILD_DEP)" \
 	-DMPFR_BUILD_DEP="$(MPFR_BUILD_DEP)" \
 	-DMPC_BUILD_DEP="$(MPC_BUILD_DEP)" \
@@ -785,6 +782,9 @@ endif
 ifeq ($(with_jit),yes)
   addons += libjit
 endif
+ifeq ($(with_libcc1),yes)
+  addons += libcc1
+endif
 ifeq ($(with_d),yes)
   languages += d
   ifeq ($(with_libphobos),yes)
@@ -801,6 +801,9 @@ endif
 
   languages += ada
   addons += libgnat libs source # libgmath libnof lib64gnat ssp
+  ifeq ($(with_gnatsjlj),yes)
+    addons += adasjlj
+  endif
 
   languages += java
   addons += gcj
@@ -871,6 +874,9 @@ endif
         addons += $(if $(findstring amd64,$(biarchx32archs)),libx32gcc)
         addons += $(if $(findstring armel,$(biarchhfarchs)),libhfgcc)
         addons += $(if $(findstring armhf,$(biarchsfarchs)),libsfgcc)
+        ifeq ($(with_libcc1),yes)
+          addons += libcc1
+        endif
       endif
     endif
   endif
@@ -882,11 +888,11 @@ endif
   ifeq ($(with_separate_gnat),yes)
     ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
       languages := $(filter-out ada,$(languages))
-      addons := $(filter-out libgnat,$(addons))
+      addons := $(filter-out libgnat adasjlj,$(addons))
     endif
     ifeq ($(PKGSOURCE),gnat-$(BASE_VERSION))
       languages = ada
-      addons = libgnat
+      addons = gnatbase libgnat
     endif
   endif
   ifeq ($(with_separate_gdc),yes)
@@ -1007,7 +1013,6 @@ substvars-file:
 		echo 'dep:libcxxbiarchdbg=$(libstdc++biarchdbg)'; \
 		echo 'dep:libgnat=$(LIBGNAT_DEP)'; \
 		echo 'dep:ecj=$(ECJ_DEP)'; \
-		echo 'dep:libcloog=$(CLOOG_RUNTIME_DEP)'; \
 	) > debian/substvars.local.tmp
 ifneq (,$(filter $(DEB_TARGET_ARCH), $(multilib_archs)))
 	( \
@@ -1167,6 +1172,10 @@ ifeq ($(with_libphobos),yes)
 	echo 'dep:gdccross=gdc$(pkg_ver) (>= $(DEB_GCC_SOFT_VERSION))' \
 		>> debian/substvars.local.tmp
   endif
+endif
+ifeq ($(with_cc1),yes)
+	echo 'dep:libcc1=libcc1-$(CC1_SONAME) (>= $${gcc:Version})' \
+		>> debian/substvars.local.tmp
 endif
 #ifneq (,$(findstring gtk, $(java_awt_peers)))
 #	echo 'pkg:gcjgtk=libgcj$(subst 0,,$(GCJ_SONAME))-awt-gtk (>= $(DEB_GCJ_VERSION))' \
