Import patches-unapplied version 5-20150329-1 to debian/experimental
Imported using git-ubuntu import.

Changelog parent: 577713fd00d314be906e7502fde38860c1e6b70c

New changelog entries:
  * Update to SVN 20150329.
  * Fix building the gnat-5-doc package.
  * Fix gnat build dependencies.
  * Fix installation of the gnat upstream ChangeLog. Closes: #781451.
  * Restore the bootstrap-debug.mk patch to the ada-mips patch
    for debugging purposes. See #781457.

--- a/debian/rules.conf
+++ b/debian/rules.conf
@@ -474,20 +474,24 @@ ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
   JAVA_BUILD_INDEP :=, $(JAVA_BUILD_INDEP)
 endif
 
-# FIXME: needs zlib?
-GO_BUILD_DEP := g++-4.6,
 GO_BUILD_DEP := netbase,
+
+# try to build with itself, or with the last version
+gnat_build_dep := gnat-5 [$(ada_no_archs)] | gnat-4.9 [$(ada_no_archs)]
+ifneq (,$(filter $(distrelease), wheezy precise trusty))
+  gnat_build_dep := gnat-5 [$(ada_no_archs)] | gnat [$(ada_no_archs)]
+endif
 
 ifeq ($(PKGSOURCE),gcc-$(BASE_VERSION))
   ifneq ($(with_separate_gnat),yes)
-    # Build gnat as part of the combiled gcc-x.y source package.  Do not fail
+    # Build gnat as part of the combined gcc-x.y source package.  Do not fail
     # if gnat is not present on unsupported architectures; the build scripts
     # will not use gnat anyway.
-    GNAT_BUILD_DEP := gnat-4.9 [$(ada_no_archs)],
+    GNAT_BUILD_DEP := $(gnat_build_dep),
   endif
 else ifeq ($(single_package),yes)
   # Ditto, as part of the gcc-snapshot package.
-  GNAT_BUILD_DEP := gnat-4.9 [$(ada_no_archs)],
+  GNAT_BUILD_DEP := $(gnat_build_dep),
 else ifeq ($(PKGSOURCE),gnat-$(BASE_VERSION))
   # Special source package just for gnat. Fail early if gnat is not present,
   # rather than waste CPU cycles and fail later.
